Resolves: tdf#91880 Invalidate graphics when the gtk window is destroyed

not just when the GtkSalFrame is dtored

Change-Id: Iec33f4de39224f9b1e60d72c02164402196aaac0
(cherry picked from commit 6dcd81f81be0067425f42f0898316d7f52e279d6)